Fixing stuff to work with the new backend

--- a/geography/templates/home.html
+++ b/geography/templates/home.html
@@ -39,7 +39,7 @@
   </head>
 
   <body data-spy="scroll" data-target=".bs-docs-sidebar">
-  <span ng-init='configService.process_config({{ config_json | safe }});'></span>
+  <span ng-init='configService.processConfig({{ config_json | safe }});'></span>
   <div id="wrap">
     <!-- <span set-place-type-names='{{placeTypeNames | safe}}'></span>-->
     <!-- Navbar
