--- a/geography/templates/home.html
+++ b/geography/templates/home.html
@@ -7,7 +7,7 @@
     <title ng-bind="title" ng-init="initTitle('{{ title }}')">
       {{ map }}{% if map != ''  %} - {% endif %}{{ title }}
     </title>
-    {% if isProduction  %}
+    {% if is_production  %}
         <script type='text/javascript'>
         window.Muscula = { settings:{
             logId:"c851276b-6467-4182-a63a-045d86e9974a", suppressErrors: false, branding: 'none'
@@ -89,19 +89,19 @@
         </ul>
           ...
             <ul class="nav ng-cloak navbar-nav pull-right"
-                ng-init='initUser( {{ userJson | safe }} )'>
-                <li class="dropdown" ng-show="user.username === ''" >
+                ng-init='initUser( {{ user_json | safe }} )'>
+                <li class="dropdown" ng-show="!user.status.logged && !user.status.loading" >
                   <a href=""
                      role="button"
                      track-click="login"
                      class="drop-login atooltip"
                      title="{% trans "Přihlašte se jednoduše přes Google nebo Facebook, aby si systém váše znalosti pamatoval i příště." %}"
                      container="body"
-                     login-button >
+                     login-button>
                     {% trans "Přihlásit se" %}
                   </a>
                 </li>
-                <li class="dropdown" ng-show="user.username !== ''">
+                <li class="dropdown" ng-show="user.status.logged">
                   <a id="drop1" href="" role="button" class="dropdown-toggle" data-toggle="dropdown">
                     <i class="glyphicon glyphicon-user"></i>
                     <span ng-bind="user.username"></span> <b class="caret"></b>
@@ -158,7 +158,7 @@
     <!-- Main content
     ================================================== -->
     <div data-ng-view id="ng-view" >
-     {% if isHomepage %}
+     {% if is_homepage %}
         {% include "generated/homepage.html" %}
      {% elif map != '' %}
         <div class="map-container">
@@ -266,7 +266,7 @@
       js.src = "//connect.facebook.net/{{LANGUAGE_CODE}}_CZ/all.js#xfbml=1&appId=543575712384201";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
-    {% if isProduction  %}
+    {% if is_production  %}
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
