Fix some typos and details

--- a/geography/templates/home.html
+++ b/geography/templates/home.html
@@ -57,7 +57,7 @@
       <span class="icon-bar"></span>
     </button>
 
-      <a class="navbar-brand" href="">{% trans "Slepé mapy" %}</a>
+      <a class="navbar-brand" href="/">{% trans "Slepé mapy" %}</a>
       <div id="nav-main" class="collapse navbar-collapse navbar-responsive-collapse">
         <ul class="nav navbar-nav  pull-left">
                 <li ng-class="'/view/world/'|isActive">
