Fix main menu link to user profile

--- a/geography/templates/home.html
+++ b/geography/templates/home.html
@@ -108,7 +108,9 @@
                   </a>
                   <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
                     <li>
+                    {% verbatim %}
                       <a href="/u/{{userService.user.username}}" >
+                    {% endverbatim %}
                         {% trans "Můj profil" %}
                       </a>
                     </li>
