Fix homepage for lazy users

--- a/geography/templates/home.html
+++ b/geography/templates/home.html
@@ -172,7 +172,7 @@
      {% endif %}
     </div>
   </div>
-    <div id="feedback-btn" feedback-comment email="{{user.user.email}}">
+    <div id="feedback-btn" feedback-comment email="{{email}}">
     </div>
 
     <div class="" id="footer">
@@ -185,7 +185,7 @@
           </li>
           {% endif %}
           <li>
-            <span feedback-comment  email="{{user.user.email}}">
+            <span feedback-comment  email="{{email}}">
             </span>
           </li>
           <li>
