Hide feedback button on small screens

--- a/geography/static/sass/_welcome-page.sass
+++ b/geography/static/sass/_welcome-page.sass
@@ -145,7 +145,7 @@ h1, h2, h3
     margin: 1%
 
 @media (max-width: 992px)
-  #feedback
+  #feedback-btn
     display: none
 
 @media (max-width: 767px)
