--- a/geography/templates/home.html
+++ b/geography/templates/home.html
@@ -29,6 +29,7 @@
     <link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
     <link rel="alternate" href="/cs/" hreflang="cs" />
     <link rel="alternate" href="/en/" hreflang="en" />
+    <link rel="alternate" href="/es/" hreflang="es" />
 
     <!-- Le styles -->
     <style>
