Set up difficulty rating modal

--- a/geography/templates/home.html
+++ b/geography/templates/home.html
@@ -178,6 +178,7 @@
        {% trans "Napište nám" %}
      </a>
     </div>
+    <rating-modal></rating-modal>
 
     <div class="" id="footer">
       <div class="col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
