Update links to other systems

--- a/geography/templates/home.html
+++ b/geography/templates/home.html
@@ -216,7 +216,7 @@
                 <a href="http://matmat.cz/">MatMat</a>
               </li>
               <li>
-                <a href="http://autoskolachytre.cz/">Autoškola chytře</a>
+                <a href="http://poznavackaprirody.cz/">Poznávačka přírody</a>
               </li>
             </ul>
           {% endif %}
