--- a/geography/templates/home.html
+++ b/geography/templates/home.html
@@ -173,10 +173,17 @@
      {% endif %}
     </div>
   </div>
-    <div id="feedback-btn">
-      <a feedback-comment email="{{email}}" href="">
-       {% trans "Napište nám" %}
-     </a>
+    <div id="feedback-btn" ng-hide="hideFeedback">
+      <span class="rotate">
+        <a class='main-btn' feedback-comment email="{{email}}" href="">
+          {% trans "Napište nám" %}
+        </a>
+        <a href="" title="{% trans "Skrýt tlačítko" %}"
+            class="hide-btn btn btn-xs btn-primary"
+            ng-click="hideFeedback=true">
+          <i class="glyphicon glyphicon-remove-sign"></i>
+        </a>
+      </span>
     </div>
     <rating-modal></rating-modal>
 
