Add og:image meta tags

--- a/geography/templates/home.html
+++ b/geography/templates/home.html
@@ -26,6 +26,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{% trans 'meta content' %}">
     <meta name="keywords" content="{% trans 'meta keywords' %}" />
+    <meta property="og:image" content="{{DOMAIN}}/static/img/practice-example-{{LANGUAGE_CODE}}.png"/>
+    <meta property="og:image" content="{{DOMAIN}}/static/img/knowledge-map.png"/>
+    <meta property="og:image" content="{{DOMAIN}}/static/img/knowledge-map-africa.png"/>
+    <meta property="og:image" content="{{DOMAIN}}/static/img/knowledge-map-asia.png"/>
+    <meta property="og:image" content="{{DOMAIN}}/static/img/knowledge-map-cz-mountains.png"/>
+    <meta property="og:image" content="{{DOMAIN}}/static/img/map-cz-rivers.png"/>
     <link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
     <link rel="alternate" href="/cs/" hreflang="cs" />
     <link rel="alternate" href="/en/" hreflang="en" />
