--- a/geography/templates/home.html
+++ b/geography/templates/home.html
@@ -193,6 +193,10 @@
     </div>
     <rating-modal></rating-modal>
 
+   {% if LANGUAGE_CODE == "cs" %}
+    <div content-admin-banner></div>
+   {% endif %}
+
     <div class="" id="footer">
       <div class="col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
         <span class="col-sm-3">
