--- a/geography/templates/home.html
+++ b/geography/templates/home.html
@@ -33,9 +33,10 @@
     <meta property="og:image" content="{{DOMAIN}}/static/img/knowledge-map-cz-mountains.png"/>
     <meta property="og:image" content="{{DOMAIN}}/static/img/map-cz-rivers.png"/>
     <link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
-    <link rel="alternate" href="/cs/" hreflang="cs" />
-    <link rel="alternate" href="/en/" hreflang="en" />
-    <link rel="alternate" href="/es/" hreflang="es" />
+
+    {% for lang, domain in LANGUAGE_DOMAINS.items %}
+    <link rel="alternate" href="//{{domain}}/{{hack}}" hreflang="{{lang}}" />
+    {% endfor %}
 
     <!-- Le styles -->
     <style>
