Show a loading indicator when loading next question

--- a/geography/static/sass/_welcome-page.sass
+++ b/geography/static/sass/_welcome-page.sass
@@ -128,6 +128,13 @@ h1, h2, h3
   margin-top: 30px
   margin-bottom: 60px
 
+.loading-indicator.overlay
+  padding-top: 30px
+  padding-bottom: 60px
+  position: absolute
+  margin: -30px -20px
+  background-color: rgba(255,255,255, 0.9)
+
 @-webkit-keyframes slideUp 
   from 
     bottom: -100px
