Fix cursor on seas

--- a/geography/static/sass/map.sass
+++ b/geography/static/sass/map.sass
@@ -11,6 +11,7 @@ svg
   .mountains,
   .island,
   .lake
+  .sea
     cursor: pointer
     fill-opacity: 1
     &:hover
@@ -21,4 +22,5 @@ svg
   .city
     fill-opacity: 1
   .lake
+  .sea
     stroke: #53a5df
