Update volunteers incentive with translations info

--- a/geography/templates/home.html
+++ b/geography/templates/home.html
@@ -227,6 +227,11 @@
                {% trans "Napište nám" %}
             </a>
           </li>
+         {% if LANGUAGE_CODE == "cs" %}
+          <li>
+              <a href="/offer">Zapojte se</a>
+          </li>
+          {% endif %}
           <li>
             <a href="https://plus.google.com/+SlepemapyCz/">Google+</a>
           </li>
