--- a/geography/static/sass/map.sass
+++ b/geography/static/sass/map.sass
@@ -1,6 +1,4 @@
 svg
-  .bg
-    stroke-width: 1.5
   .state,
   .province,
   .region,
@@ -10,7 +8,7 @@ svg
   .bundesland,
   .mountains,
   .island,
-  .lake
+  .lake,
   .sea
     cursor: pointer
     fill-opacity: 1
