--- a/geography/static/sass/_preview-map.sass
+++ b/geography/static/sass/_preview-map.sass
@@ -8,11 +8,11 @@
     height: 5px
     background: none
   overflow: hidden
-  li
+  li.long-background
     background: #eee
     margin-bottom: -99999px
     padding-bottom: 99999px
-  li:nth-child(even)
+  li.long-background:nth-child(even)
     background: #e7e7e7
   li.collapsed
     margin-bottom: 0px
