--- a/geography/static/sass/_flags.sass
+++ b/geography/static/sass/_flags.sass
@@ -7,6 +7,9 @@
   margin: 5px 3px 0 3px
   background: url(../img/flags.png) no-repeat
 
+.flag-none
+  display: none
+
 .flag-ad
   background-position: -16px 0
   width: 16px
