Practice: justify buttons in horizontal layout

--- a/geography/static/sass/_practice.sass
+++ b/geography/static/sass/_practice.sass
@@ -108,10 +108,35 @@
       white-space: normal
     .btn
       display: block
-  .practice
+  .practice, .summary
     min-height: 690px
+    .question
+      padding-left: 10px
+      padding-right: 10px
+      .label
+        width: 100%
+        text-align: center
+      span
+        margin-right: 0px
+    .button-block
+      display: block
+      margin-right: 15px
+      margin-left: 15px
+    .btn
+      margin-right: 0
+      display: block
+      width: 86%
+      white-space: normal
     h2
       padding-left: 10px
+  .summary
+    .btn
+      width: 100%
+      margin-left: 0px
+    .button-block.pull-right
+      float: none !important
+      margin-right: 0px
+      margin-left: 0px
   .inner-practice
     min-height: 690px
   .col-sm-6
