--- a/geography/templates/home.html
+++ b/geography/templates/home.html
@@ -213,6 +213,8 @@
     <div content-admin-banner></div>
    {% endif %}
 
+    <div sign-in-banner></div>
+
     <div class="" id="footer">
       <div class="col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
         <span class="col-sm-3">
