Add capitals and states to map tooltips

--- a/geography/static/sass/_map-container.sass
+++ b/geography/static/sass/_map-container.sass
@@ -62,9 +62,11 @@ $map-height:500px
 
 .qtip-titlebar
   .label
-    font-size: 20px
-    margin-bottom: 15px
+    font-size: 13px
     white-space: normal
     text-align: left
+  .label-title
+    font-size: 20px
+    margin-bottom: 15px
    
   font-size: 13px
