--- a/geography/templates/home.html
+++ b/geography/templates/home.html
@@ -212,7 +212,7 @@
     <rating-modal></rating-modal>
 
    {% if LANGUAGE_CODE == "cs" %}
-    <div content-admin-banner></div>
+    <div ng-include="'/static/tpl/promo_banner.html'"></div>
    {% endif %}
 
     <div sign-in-banner></div>
