Move social links from footer to navbar

--- a/geography/templates/home.html
+++ b/geography/templates/home.html
@@ -176,6 +176,16 @@
                     {% endfor %}
                 </ul>
               </li>
+          <li>
+            <a class="contact-facebook"
+              target="_blank"
+              href="https://www.facebook.com/slepemapy">Facebook</a>
+          </li>
+          <li>
+            <a class="contact-google"
+              target="_blank"
+              href="https://plus.google.com/+SlepemapyCz/">Google+</a>
+          </li>
             </ul>
         </div><!-- /.nav-collapse -->
       </div><!-- /.container -->
@@ -234,12 +244,6 @@
               <a href="/offer">Zapojte se</a>
           </li>
           {% endif %}
-          <li>
-            <a href="https://plus.google.com/+SlepemapyCz/">Google+</a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/slepemapy">Facebook</a>
-          </li>
         </ul>
         </span>
         <span class="col-sm-3">
