Add support for reservoirs

--- a/geography/static/sass/map.sass
+++ b/geography/static/sass/map.sass
@@ -9,6 +9,7 @@ svg
   .mountains,
   .island,
   .lake,
+  .reservoir,
   .sea
     cursor: pointer
     fill-opacity: 1
@@ -19,6 +20,7 @@ svg
     cursor: pointer
   .city
     fill-opacity: 1
-  .lake
+  .lake,
+  .reservoir,
   .sea
     stroke: #53a5df
