Fix some templates paths for templateCache

--- a/geography/templates/home.html
+++ b/geography/templates/home.html
@@ -222,7 +222,7 @@
     <rating-modal></rating-modal>
 
    {% if LANGUAGE_CODE == "cs" %}
-    <div ng-include="'/static/tpl/promo_banner.html'"></div>
+    <div ng-include="'static/tpl/promo_banner.html'"></div>
    {% endif %}
 
     <div sign-in-banner></div>
