--- a/geography/static/sass/_preview-map.sass
+++ b/geography/static/sass/_preview-map.sass
@@ -7,16 +7,6 @@
     border-radius: 0
     height: 5px
     background: none
-  overflow: hidden
-  li.long-background
-    background: #eee
-    margin-bottom: -99999px
-    padding-bottom: 99999px
-  li.long-background:nth-child(even)
-    background: #e7e7e7
-  li.collapsed
-    margin-bottom: 0px
-    padding-bottom: 0px
   .collapse-control
     margin: 0px -15px 0px -15px
     background: rgba(0,0,0,0.15)
@@ -44,6 +34,7 @@
 .layers-tabs
   background: rgba(0,0,0,0.2)
   padding-bottom: 10px
+  overflow-x: auto
   .tab
     cursor: pointer
     color: #999
@@ -61,8 +52,17 @@
       margin-top: 15px
       font-weight: bold
     h2
-      max-height: 30px
       overflow: hidden
+    &.inline-tab
+      display: inline-block
+      padding-left: 5px
+      padding-right: 5px
+      display: table-cell
+      width: 1%
+      text-align: center
+  .map-progress
+    .progress.overview-progress
+      margin-bottom: 20px
   
 
 $anim-time: 0.5s
