--- a/geography/static/sass/_overview.sass
+++ b/geography/static/sass/_overview.sass
@@ -20,14 +20,9 @@
   padding-bottom: 30px
   .inline-block
     margin: 5px
-    .btn-primary
-      min-width: 100px
-    .btn
-      border-bottom-left-radius: 0
-      border-bottom-right-radius: 0
     .progress, .progress-bar
-      border-top-left-radius: 0
-      border-top-right-radius: 0
+      border-radius: 0
+      height: 5px
   h2
     padding: 20px
   h1
@@ -38,6 +33,44 @@
     display: inline
     margin-top: 10px
     margin-bottom: 0
+
+.btn-map
+  display: inline-block
+  width: 150px
+  height: 100px
+  background-repeat: no-repeat
+  background-position: center
+  background-size: cover
+  position: relative
+  overflow: hidden
+  padding: 0
+  margin-bottom: -5px
+  span
+    position: absolute
+    bottom: -5px
+    font-size: 1em
+    text-align: center
+    display: block
+    width: 100%
+    color: white
+    background-color: rgba(0,0,0,0.5)
+    transition: all ease-in-out 0.2s
+    margin: 0
+    padding: 5px
+    font-weight: bold
+  &:hover
+    span
+      bottom: 0px
+  .cloak
+    display: block
+    position: absolute
+    top: 0px
+    left: 0px
+    width: 100%
+    height: 100%
+    background-color: rgba(0,0,0,0.05)
+    &:hover
+      background-color: rgba(0,0,0,0.1)
 
 .overview-row
   padding: 10px 0 10px 0
