Polish reminder email

--- a/geography/templates/reminder_email.html
+++ b/geography/templates/reminder_email.html
@@ -7,9 +7,7 @@
       <p>
       Pěkný den,<br>
       posíláme vybrané otázky ze 
-        <a href="{{domain}}">
-          {% trans "Slepé mapy.cz" %}
-        </a>
+      <a href="{{domain}}">{% trans "SlepeMapy.cz" %}</a>
       na tento týden:
       </p>
         <h2>{{ subject }}</h2>
