--- a/geography/templates/home.html
+++ b/geography/templates/home.html
@@ -131,6 +131,19 @@
                     {% endfor %}
                   </ul>
                 </li>
+
+               {% if LANGUAGE_CODE == "cs" %}
+                <li class="dropdown">
+                  <a id="drop-states" href=""  class="dropdown-toggle" data-toggle="dropdown">
+                    {% trans "Kraje ČR" %} <b class="caret"></b>
+                  </a>
+                  <ul class="dropdown-menu" role="menu" aria-labelledby="drop-states" id="menu-list-states">
+                    {% for region in regions %}
+                    <li><a href="/view/{{ region.identifier }}/">{{ region.name }}</a></li>
+                    {% endfor %}
+                  </ul>
+                </li>
+               {% endif %}
         </ul>
           ...
             <ul class="nav ng-cloak navbar-nav pull-right"
