Fix hreflang url

--- a/geography/templates/home.html
+++ b/geography/templates/home.html
@@ -50,7 +50,7 @@
     <meta name="msapplication-square310x310logo" content="/static/img/icons/largetile.png" />
 
     {% for lang, domain in LANGUAGE_DOMAINS.items %}
-    <link rel="alternate" href="//{{domain}}/{{hack}}" hreflang="{{lang}}" />
+    <link rel="alternate" href="https://{{domain}}/{{hack}}" hreflang="{{lang}}" />
     {% endfor %}
 
     <!-- Le styles -->
