Setup adjustment feedback dialog

--- a/geography/templates/home.html
+++ b/geography/templates/home.html
@@ -254,7 +254,7 @@
         </span>
       </span>
     </div>
-    <rating-modal></rating-modal>
+    <adjustment-modal></adjustment-modal>
 
    {% if LANGUAGE_CODE == "cs" %}
     <div ng-include="'static/tpl/promo_banner.html'"></div>
